[gd_scene load_steps=14 format=3 uid="uid://c6rfhnxgiqy2x"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_7js2w"]
[ext_resource type="Texture2D" uid="uid://psg60l5gibtf" path="res://icon.svg" id="1_8cl5s"]
[ext_resource type="Script" path="res://Scripts/weapon.gd" id="2_oi7la"]
[ext_resource type="Texture2D" uid="uid://dnmd3uuldxeuh" path="res://Textures/Particles/trace_01.png" id="4_iex56"]
[ext_resource type="Script" path="res://Scripts/slash_particles.gd" id="5_odfrv"]
[ext_resource type="Script" path="res://Scripts/basic_enemy.gd" id="6_hnh36"]
[ext_resource type="Script" path="res://Scripts/cursor_rotator.gd" id="7_6ih4p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpc56"]
size = Vector2(125, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igoh6"]
size = Vector2(13, 208)

[sub_resource type="Curve" id="Curve_fbc7s"]
_data = [Vector2(0, 0.152174), 0.0, 0.0, 0, 0, Vector2(0.528358, 0.228555), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_dxiwx"]
curve = SubResource("Curve_fbc7s")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hoa2p"]
lifetime_randomness = 1.0
emission_shape_scale = Vector3(15.39, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
alpha_curve = SubResource("CurveTexture_dxiwx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpsl4"]
size = Vector2(1144, 33)

[node name="Test_BaseMechanics" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(334, 412)
script = ExtResource("1_7js2w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_hpc56")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(1, 3, 1, 1)
texture = ExtResource("1_8cl5s")

[node name="Weapon" type="Area2D" parent="Player"]
rotation = 3.14159
script = ExtResource("2_oi7la")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Weapon"]
position = Vector2(0.5, 105.5)
shape = SubResource("RectangleShape2D_igoh6")

[node name="Sprite2D" type="Sprite2D" parent="Player/Weapon"]
modulate = Color(0.866823, 0.20901, 0.662371, 1)
position = Vector2(0.5, 105.5)
scale = Vector2(0.0859375, 1.64844)
texture = ExtResource("1_8cl5s")

[node name="Marker2D" type="Marker2D" parent="Player/Weapon"]
position = Vector2(-0.000527318, 208)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Player/Weapon"]
position = Vector2(-0.000266194, 105)
rotation = -3.14159
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_hoa2p")
texture = ExtResource("4_iex56")
lifetime = 0.3
preprocess = 2.0
randomness = 0.5
fixed_fps = 60
script = ExtResource("5_odfrv")

[node name="BasicEnemy" type="CharacterBody2D" parent="."]
position = Vector2(752, 553)
script = ExtResource("6_hnh36")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BasicEnemy"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_hpc56")

[node name="Sprite2D" type="Sprite2D" parent="BasicEnemy"]
modulate = Color(3, 1, 1, 1)
texture = ExtResource("1_8cl5s")

[node name="Weapon" type="Area2D" parent="BasicEnemy"]
rotation = 3.14159
script = ExtResource("2_oi7la")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BasicEnemy/Weapon"]
position = Vector2(0.5, 105.5)
shape = SubResource("RectangleShape2D_igoh6")

[node name="Sprite2D" type="Sprite2D" parent="BasicEnemy/Weapon"]
modulate = Color(0.866823, 0.20901, 0.662371, 1)
position = Vector2(0.5, 105.5)
scale = Vector2(0.0859375, 1.64844)
texture = ExtResource("1_8cl5s")

[node name="Marker2D" type="Marker2D" parent="BasicEnemy/Weapon"]
position = Vector2(-0.000527318, 208)

[node name="GPUParticles2D" type="GPUParticles2D" parent="BasicEnemy/Weapon"]
position = Vector2(-0.000266194, 105)
rotation = -3.14159
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_hoa2p")
texture = ExtResource("4_iex56")
lifetime = 0.5
randomness = 1.0
script = ExtResource("5_odfrv")

[node name="CursorRotator" type="Marker2D" parent="BasicEnemy"]
script = ExtResource("7_6ih4p")

[node name="Cursor" type="Marker2D" parent="BasicEnemy/CursorRotator"]
position = Vector2(0, -214)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(59, 583)

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
modulate = Color(0.262932, 0.262932, 0.262932, 1)
position = Vector2(514, 52.5)
scale = Vector2(8.90625, 0.289062)
texture = ExtResource("1_8cl5s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(518, 53.5)
shape = SubResource("RectangleShape2D_dpsl4")

[node name="Sprite2D2" type="Sprite2D" parent="Floor"]
modulate = Color(0.262932, 0.262932, 0.262932, 1)
position = Vector2(512, -564.5)
scale = Vector2(8.90625, 0.289062)
texture = ExtResource("1_8cl5s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2(516, -563.5)
shape = SubResource("RectangleShape2D_dpsl4")

[node name="Sprite2D3" type="Sprite2D" parent="Floor"]
modulate = Color(0.262932, 0.262932, 0.262932, 1)
position = Vector2(-43.4987, -247)
rotation = 1.57079
scale = Vector2(8.90625, 0.289062)
texture = ExtResource("1_8cl5s")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor"]
position = Vector2(-39.4987, -246)
rotation = 1.57079
shape = SubResource("RectangleShape2D_dpsl4")

[node name="Sprite2D4" type="Sprite2D" parent="Floor"]
modulate = Color(0.262932, 0.262932, 0.262932, 1)
position = Vector2(1092.5, -258)
rotation = 1.57079
scale = Vector2(8.90625, 0.289062)
texture = ExtResource("1_8cl5s")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Floor"]
position = Vector2(1096.5, -257)
rotation = 1.57079
shape = SubResource("RectangleShape2D_dpsl4")

[connection signal="body_shape_entered" from="Player/Weapon" to="Player/Weapon" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Player/Weapon" to="Player/Weapon" method="_on_body_shape_exited"]
[connection signal="on_anchor_remove" from="Player/Weapon" to="Player" method="_on_weapon_on_anchor_remove"]
[connection signal="on_anchor_set" from="Player/Weapon" to="Player" method="_on_weapon_on_anchor_set"]
[connection signal="on_weapon_swing_start" from="Player/Weapon" to="Player/Weapon/GPUParticles2D" method="_on_weapon_on_weapon_swing_start"]
[connection signal="on_weapon_swing_stop" from="Player/Weapon" to="Player/Weapon/GPUParticles2D" method="_on_weapon_on_weapon_swing_stop"]
[connection signal="body_shape_entered" from="BasicEnemy/Weapon" to="BasicEnemy/Weapon" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="BasicEnemy/Weapon" to="BasicEnemy/Weapon" method="_on_body_shape_exited"]
[connection signal="on_anchor_remove" from="BasicEnemy/Weapon" to="BasicEnemy" method="_on_weapon_on_anchor_remove"]
[connection signal="on_anchor_set" from="BasicEnemy/Weapon" to="BasicEnemy" method="_on_weapon_on_anchor_set"]
[connection signal="on_weapon_swing_start" from="BasicEnemy/Weapon" to="BasicEnemy/Weapon/GPUParticles2D" method="_on_weapon_on_weapon_swing_start"]
[connection signal="on_weapon_swing_stop" from="BasicEnemy/Weapon" to="BasicEnemy/Weapon/GPUParticles2D" method="_on_weapon_on_weapon_swing_stop"]
